# AI-Flowlib

./: .gitignore  README.MD  docker-compose.repl.yml  pyproject.toml  run_agent
flowlib/: __init__.py
flowlib/agent/: __init__.py  launcher.py  registry.py
flowlib/apps/: README.md  flowlib_agent.py  flowlib_config_gui.py  main_agent.py  run_repl.py  start_repl_with_services.sh
flowlib/config/: alias_manager.py  registry_bridge.py  required_alias_validator.py  required_resources.py  role_manager.py
flowlib/core/: __init__.py  interface_models.py  interfaces.py  models.py  (+1 more)
flowlib/server/: README.md  pyproject.toml  run_server.py  run_server.sh
flowlib/server/agent_states/: 3e61a439-329e-4d25-a469-2a2c65dcd864.json  3e61a439-329e-4d25-a469-2a2c65dcd864.meta.json  896cdb30-859a-413b-98c8-b0fa6138e419.json  896cdb30-859a-413b-98c8-b0fa6138e419.meta.json  9915be69-f6b7-4fdf-8f01-3bd3ceab5566.json  9915be69-f6b7-4fdf-8f01-3bd3ceab5566.meta.json  a6d53a63-18ff-4441-95d1-d08f2f1c5773.json  a6d53a63-18ff-4441-95d1-d08f2f1c5773.meta.json  ac031918-eb7b-45db-9821-ad1a89272410.json  ac031918-eb7b-45db-9821-ad1a89272410.meta.json
flowlib/server/server/: main.py
flowlib/server/server/api/: agents.py  auth.py  configs.py  diff.py  health.py  knowledge.py  projects.py  workspace.py
flowlib/server/server/core/: config.py  registry_lock.py  workspace.py
flowlib/server/server/db/: __init__.py
flowlib/server/server/persistence/: db.py  models.py
flowlib/server/server/services/: agent_scaffold.py  agent_service.py  alias_file_generator.py  alias_service.py  config_scaffold.py  config_service.py  diff_service.py  knowledge_plugin_service.py  project_service.py  run_event_manager.py  schema_service.py  setup_config_generator.py
flowlib/server/tests/: test_agents_endpoints.py  test_config_rename_delete.py  test_schema_endpoints.py
flowlib/server/ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
flowlib/server/ui/.github/workflows/: ci.yml
flowlib/server/ui/src/: App.tsx  index.css  main.tsx
flowlib/server/ui/src/components/: ErrorBoundary.tsx  Layout.tsx
flowlib/server/ui/src/components/agents/: ActiveRunsList.tsx  AgentEditor.tsx  AgentList.tsx  CreateAgentForm.tsx  ReplSession.tsx  RunDetails.tsx  RunEventStream.tsx  RunHistory.tsx  RunStartForm.tsx
flowlib/server/ui/src/components/configs/: CreateConfigDialog.tsx  RenameDeleteControls.tsx
flowlib/server/ui/src/components/configs/ConfigEditor/: AgentEditorForm.tsx  ConfigEditor.tsx  DiffPreview.tsx  EditorModeSelector.tsx  MessageSourceEditorForm.tsx  ProviderEditorForm.tsx  RawEditorForm.tsx  ResourceEditorForm.tsx  index.tsx
flowlib/server/ui/src/components/configs/ConfigLists/: AgentConfigList.tsx  AliasesTab.tsx  MessageSourceConfigList.tsx  ProviderConfigList.tsx  ResourceConfigList.tsx
flowlib/server/ui/src/components/configs/CreateConfigDialog/: MessageSourceFormFields.tsx  ProviderFormFields.tsx  ResourceFormFields.tsx
flowlib/server/ui/src/components/configs/SchemaFields/: SchemaFieldInput.tsx
flowlib/server/ui/src/components/forms/: FormField.tsx  FormGroup.tsx  index.ts
flowlib/server/ui/src/components/knowledge/: KnowledgePluginMultiSelect.tsx  PluginDetailsDialog.tsx  PluginGenerationWizard.tsx  PluginGridView.tsx  PluginListView.tsx
flowlib/server/ui/src/components/layout/: Container.tsx  Divider.tsx  Grid.tsx  Sidebar.tsx  SplitPane.tsx  Stack.tsx  TopBar.tsx  index.ts
flowlib/server/ui/src/components/projects/: CreateProjectForm.tsx  ProjectCard.tsx  ProjectCreationWizard.tsx  ProjectGridView.tsx  ProjectListView.tsx  ValidationResults.tsx
flowlib/server/ui/src/components/ui/: Alert.tsx  AlertDialog.tsx  Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Label.tsx  Select.tsx  Separator.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  Textarea.tsx  index.ts
flowlib/server/ui/src/components/workspace/: DirectoryBrowser.tsx  WorkspaceSetup.tsx
flowlib/server/ui/src/constants/: polling.ts
flowlib/server/ui/src/contexts/: ProjectContext.tsx  WorkspaceContext.tsx
flowlib/server/ui/src/hooks/: __init__.ts  useProjectSelection.ts  useUrlState.ts
flowlib/server/ui/src/hooks/agents/: useAgentEditor.ts  useAgentForm.ts  useAgentRunForm.ts  useReplSession.ts  useRunEvents.ts  useRunsPolling.ts
flowlib/server/ui/src/hooks/configs/: useConfigMutations.ts  useConfigQueries.ts  useCreateMutation.ts  useMessageSourceEditorState.ts  useMessageSourceFormState.ts  useProviderEditorState.ts  useProviderFormState.ts  useResourceEditorState.ts  useResourceFormState.ts
flowlib/server/ui/src/hooks/knowledge/: useKnowledgePlugins.ts  usePluginGenerationWizard.ts
flowlib/server/ui/src/hooks/projects/: useProjectCreationWizard.ts  useProjectForm.ts  useProjectValidation.ts
flowlib/server/ui/src/pages/: Agents.tsx  Configs.tsx  Dashboard.tsx  KnowledgePlugins.tsx  Projects.tsx  RunConsole.tsx
flowlib/server/ui/src/services/: __init__.ts  agents.ts  api.ts  configs.ts  knowledge.ts  projects.ts  workspace.ts
flowlib/server/ui/src/store/: __init__.ts
flowlib/server/ui/src/theme/: breakpoints.ts  colors.ts  index.ts  spacing.ts  typography.ts
flowlib/server/ui/src/utils/: cn.ts  statusBadge.ts
flowlib/server/ui/src/utils/configs/: configHelpers.ts
flowlib/server/ui/src/utils/validation/: validators.ts
(+813 files in other folders)
